* Added the ability to solve problems with bitstring (binary) populations. The field options.PopulationType should be set to 'bitstring', and the fitness function should be set up to accept binary vectors for input. It is not yet possible to solve problems with a combination of continuous and binary variables.
* Verbosity will be set to 1 (corresponding to options.Display == 'final') by default (hardcoded). This prevents errors even if the user defines an invalid string for options.Display.
* Added framework for 'iter' and 'diagnose' verbosities, in addition to 'off' and 'final'
* If options.Display is set to 'off', a confirmation is no longer displayed by PSOCREATIONUNIFORM if initial particle positions or velocities are provided. These only appear if the display level is set to 'diagnose'.
* Fixed a bug in PSOITERATE where negative velocities wouldn't conform to options.VelocityLimit.
* Fixed a potential bug in PSOCREATIONUNIFORM where the number of particles to generate may be wrong if the user supplies a different number of initial particle velocities compared to initial positions.

To do (in no particular order):
* An output function defined by options.OutputFcns that can save current swarm state in a file which can be reloaded later as a problem structure, in case of a system crash.
* Ability to define neighborhoods of particles to determine non-local best positions (social parameter).
  - Social stereotyping using clustering algorithm (Kennedy 2000)
  - Von Neumann topology (Kennedy 2002)
* New constraint enforcement method: 'penalize', described in Perez 2007.
* Ability to solve problems with discrete parameters
* New convergence criterion: isothermal equilibrium (Mikki 2008, Chapter 3).
* Clerc's method: constriction factor chi to prevent explosive divergence of swarm.
* Swarm coherence and collision-avoidance parameters?
* Detect and eliminate dependent (i.e. redundant) linear constraints.
* Implement multiobjective optimization option; find Pareto front.