@@ -1,11 +1,17 @@
 function f = nonlinearconstrdemo(x)
-% Nonlinear constraints demo with Rosenbrock's function.
-% Takes row inputs. If input is not row, will attempt to correct it.
-% Syntax:
-% y = rosenbrocksfcn(x)
-% options = rosenbrocksfcn('init')
+% Nonlinear constraints demo with Rosenbrock's function. Select this
+% function by running PSODEMO and choosing it as the demo function.
+%
+% This demonstration shows an example of the pso working over Rosenbrock's
+% banana function, with an additional nonlinear constraint confining the
+% swarm to search within a four leaf clover-shaped area (quadrifolium)
+% superimposed on top of the two-dimensional design space. The true global
+% optimum is marked by the red flag, and lies right on the border of the
+% feasible design space.
 
 if strcmp(x,'init')
+%     f.Aineq = [1 -1;-1 0] ;
+%     f.bineq = [0;0] ;
     f.Aineq = [] ;
     f.bineq = [] ;
     f.Aeq = [] ;
@@ -15,7 +21,7 @@ if strcmp(x,'init')
     f.options.PopInitRange = [-2, -2; 2, 2] ;
     f.options.KnownMin = [1,1] ;
     f.options.PopulationSize = 100 ;
-    f.options.ConstrBoundary = 'soft' ;
+    f.options.ConstrBoundary = 'penalize' ;
 else
     x = reshape(x,1,[]) ;
     if size(x,2) >= 2
