@@ -72,12 +72,14 @@ ver 20100503:
 * Fixed a bug in PSOITERATE where negative velocities wouldn't conform to options.VelocityLimit.
 * Fixed a potential bug in PSOCREATIONUNIFORM where the number of particles to generate may be wrong if the user supplies a different number of initial particle velocities compared to initial positions.
 
+ver 20130502
+* Added a new experimental constraint enforcement method: 'penalize', described in Perez 2007.
+
 To do (in no particular order):
 * An output function defined by options.OutputFcns that can save current swarm state in a file which can be reloaded later as a problem structure, in case of a system crash.
 * Ability to define neighborhoods of particles to determine non-local best positions (social parameter).
   - Social stereotyping using clustering algorithm (Kennedy 2000)
   - Von Neumann topology (Kennedy 2002)
-* New constraint enforcement method: 'penalize', described in Perez 2007.
 * Ability to solve problems with discrete parameters
 * New convergence criterion: isothermal equilibrium (Mikki 2008, Chapter 3).
 * Clerc's method: constriction factor chi to prevent explosive divergence of swarm.
